--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Export your financial transactions from any bank.",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "compile": "tsc && babel src --out-dir dist --extensions .ts"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,18 @@
   "bugs": {
     "url": "https://github.com/noahtallen/transaction-store/issues"
   },
-  "homepage": "https://github.com/noahtallen/transaction-store#readme"
+  "homepage": "https://github.com/noahtallen/transaction-store#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "plaid": "^7.1.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/dotenv": "^8.2.0",
+    "@types/node": "^14.11.2",
+    "typescript": "^4.0.3"
+  }
 }
