--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Export your financial transactions from any bank.",
   "main": "index.js",
   "scripts": {
-    "compile": "tsc && babel src --out-dir dist --extensions .ts"
+    "compile": "tsc && babel src --out-dir dist --extensions .ts",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,12 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/dotenv": "^8.2.0",
     "@types/node": "^14.11.2",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   }
 }
