Add more config and packages

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
+# Node:
+PORT=8089
+JWT_SECRET=
+
+# Mongo:
+DB_HOST=localhost
+DB_PORT=27017
+DB_NAME=transaction_store
+
+# Plaid:
 PLAID_CLIENT_ID=
 PLAID_SECRET=
+PLAID_ENV=development
+
